[gd_scene load_steps=21 format=2]

[ext_resource path="res://texture_01.png" type="Texture" id=1]
[ext_resource path="res://texture_01_.png" type="Texture" id=2]
[ext_resource path="res://scripts/Desired_Drone_State.gd" type="Script" id=3]
[ext_resource path="res://scenes/Proto_Drone4.gd" type="Script" id=4]
[ext_resource path="res://addons/DebugOverlay.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/main.gd" type="Script" id=15]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_texture = ExtResource( 2 )
uv1_scale = Vector3( 50, 30, 1 )

[sub_resource type="ConcavePolygonShape" id=5]
data = PoolVector3Array( -1, 1, 1, 1, 1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, 1, 1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1 )

[sub_resource type="CubeMesh" id=3]

[sub_resource type="SpatialMaterial" id=6]
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.0392157 )

[sub_resource type="CylinderMesh" id=8]

[sub_resource type="SpatialMaterial" id=10]
flags_transparent = true
albedo_color = Color( 0.501961, 1, 0.498039, 0.0392157 )

[sub_resource type="PrismMesh" id=9]

[sub_resource type="SpatialMaterial" id=11]
flags_transparent = true
albedo_color = Color( 1, 0.360784, 0.360784, 0.0392157 )

[sub_resource type="SpatialMaterial" id=12]
flags_transparent = true
albedo_color = Color( 0.176471, 0.607843, 1, 0.0392157 )

[sub_resource type="SpatialMaterial" id=16]
albedo_color = Color( 0, 0.384314, 1, 1 )
albedo_texture = ExtResource( 1 )
uv1_scale = Vector3( 6, 3.984, 1 )
uv1_offset = Vector3( -0.497, -0.49, 0 )

[sub_resource type="ConvexPolygonShape" id=7]
points = PoolVector3Array( -1, -1, -1, 1, 1, 1, 1, -1, 1, 1, 1, -1, -1, 1, 1, 1, -1, -1, -1, -1, 1, -1, 1, -1 )

[sub_resource type="CubeMesh" id=17]

[sub_resource type="ConvexPolygonShape" id=18]
points = PoolVector3Array( -1, -1, -1, 1, 1, 1, 1, -1, 1, 1, 1, -1, -1, 1, 1, 1, -1, -1, -1, -1, 1, -1, 1, -1 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 15 )

[node name="Floor" type="MeshInstance" parent="."]
transform = Transform( 10, 0, 0, 0, 0.1, 0, 0, 0, 10, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="StaticBody" type="StaticBody" parent="Floor"]

[node name="CollisionShape" type="CollisionShape" parent="Floor/StaticBody"]
shape = SubResource( 5 )

[node name="Desired_Drone_State" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 1, -2.33068, 5.10879, 0 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Desired_Drone_Mesh" type="MeshInstance" parent="Desired_Drone_State"]
mesh = SubResource( 3 )
skeleton = NodePath("../..")
material/0 = SubResource( 6 )

[node name="YArrowPole" type="MeshInstance" parent="Desired_Drone_State"]
transform = Transform( 0.01, 0, 0, 0, 3, 0, 0, 0, 0.01, 0, 3.94041, 0 )
mesh = SubResource( 8 )
material/0 = SubResource( 10 )

[node name="YArrowHead" type="MeshInstance" parent="Desired_Drone_State/YArrowPole"]
transform = Transform( 7, 0, 0, 0, 0.333333, 0, 0, 0, 5, 0, 1.28907, 0 )
mesh = SubResource( 9 )
skeleton = NodePath("../..")
material/0 = SubResource( 10 )

[node name="XArrowPole" type="MeshInstance" parent="Desired_Drone_State"]
transform = Transform( -4.37114e-10, 0.3, 0, -0.1, -1.31134e-07, 0, 0, 0, 0.01, 1.29611, 0, 0 )
mesh = SubResource( 8 )
material/0 = SubResource( 11 )

[node name="XArrowHead" type="MeshInstance" parent="Desired_Drone_State/XArrowPole"]
transform = Transform( 7, 0, 0, 0, 0.333333, 0, 0, 0, 5, 0, 1.28907, 0 )
mesh = SubResource( 9 )
skeleton = NodePath("../..")
material/0 = SubResource( 11 )

[node name="ZArrowPole" type="MeshInstance" parent="Desired_Drone_State"]
transform = Transform( 1.91069e-17, -1.31134e-08, -0.01, -0.1, -1.31134e-07, 0, -4.37114e-10, 0.3, -4.37114e-10, 0, 0, 1.286 )
mesh = SubResource( 8 )
material/0 = SubResource( 12 )

[node name="ZArrowHead" type="MeshInstance" parent="Desired_Drone_State/ZArrowPole"]
transform = Transform( 7, 0, 0, 0, 0.333333, 0, 0, 0, 5, 0, 1.28907, 0 )
mesh = SubResource( 9 )
skeleton = NodePath("../..")
material/0 = SubResource( 12 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -13.125, 4.485, -20.624 )

[node name="Proto_Drone4" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0 )
script = ExtResource( 4 )

[node name="Proto_Drone_Mesh" type="MeshInstance" parent="Proto_Drone4"]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 3 )
skeleton = NodePath("../..")
material/0 = SubResource( 16 )

[node name="P1" type="Position3D" parent="Proto_Drone4/Proto_Drone_Mesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 1 )

[node name="P2" type="Position3D" parent="Proto_Drone4/Proto_Drone_Mesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -1 )

[node name="P3" type="Position3D" parent="Proto_Drone4/Proto_Drone_Mesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, -1 )

[node name="P4" type="Position3D" parent="Proto_Drone4/Proto_Drone_Mesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 1 )

[node name="CollisionShape" type="CollisionShape" parent="Proto_Drone4"]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 7 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -0.15659, 0.636204, -0.755463, 0, 0.764899, 0.64415, 0.987664, 0.100867, -0.119775, 9.49569, 1.29228, 0 )
shadow_enabled = true

[node name="Button" type="Button" parent="."]
margin_left = 71.0
margin_top = 23.0
margin_right = 143.0
margin_bottom = 58.0
text = "Restart"

[node name="RigidBody" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 4, -1.36484 )
visible = false

[node name="MeshInstance" type="MeshInstance" parent="RigidBody"]
mesh = SubResource( 17 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="RigidBody"]
shape = SubResource( 18 )
disabled = true

[node name="DebugOverlay" parent="." instance=ExtResource( 5 )]

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
